--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,30 @@
+*{
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
-
+.black-nav{
+  display: flex;
+  background: skyblue;
+  width: 100%;
+  color: #fff;
+  padding-left: 20px;
+}
+.list{
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid grey;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.modal{
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+  text-align: left;
 }
 
 @media (prefers-reduced-motion: no-preference) {
